--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "firebase": "^10.12.4",
+    "js-cookie": "^3.0.5",
     "next": "14.2.5",
+    "openai": "^4.54.0",
     "react": "^18",
     "react-dom": "^18"
   },
