--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "firebase": "^10.12.4",
+    "groq-sdk": "^0.5.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "openai": "^4.54.0",
